# TouhouRemoteControl

./: .gitignore  CMakeLists.txt  DEVELOPER.md  Makefile  README.md
include/: win32_utf8.h
lib/: jansson.lib  thcrap.lib  thcrap_tsa.lib
remote_control/: CMakeLists.txt
remote_control/include/: jansson.h.gch
remote_control/src/: CMakeLists.txt  logging.c  logging.h  read_data.c  remote_control.c  remote_control.h  server.c  server.h  server_threads.c  server_threads.h  shared_data.c  shared_data.h
src/: read_data.c  read_data.h  remote_control.c  remote_control.h  server.c  server.h  server_threads.c  shared_data.c  shared_data.h
thcrap_repo/: CMakeLists.txt  repo.js
thcrap_repo/remote_control/: files.js  global.js  patch.js  th12.js
